--- a/index.html
+++ b/index.html
@@ -117,9 +117,11 @@
         </ul> 
       </section>  
       <section class="cover">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" rel="noopener">
+          <div class="cover__background">
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+          </div>
         </a>
       </section>
       <footer class="footer"> 
@@ -138,7 +140,7 @@
               <a class="footer__link" href="https://calendar.yandex.ru" target="_blank" rel="noopener">Календарь</a>
             </li>
             <li>
-              <a class="footer__link" href="https://travel.yandex.ru"target="_blank" rel="noopener">Путешествия</a>
+              <a class="footer__link" href="https://travel.yandex.ru" target="_blank" rel="noopener">Путешествия</a>
             </li>
           </ul>
         </nav>
